# ClearsignGUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-vc14-x64.bat
res/: res.qrc
res/forms/: mainwindowform.ui
src/: main.cpp
src/gui/: mainwindow.cpp  mainwindow.h
